(tests
  (names
    test_nums
    test_bool
    test_let
    test_fn
    test_letrec
    test_cons
    test_cond
    test_side_effect
    test_macro
    test_module
    test_stdlib_list
    test_stdlib_list_monad
    test_stdlib_maybe_monad
    test_stdlib_state_monad
    test_stdlib_reader_monad
    test_include
    test_using
    test_open)
  (libraries ounit2 kontlang))